--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ python-multipart
 fastapi==0.100.0
 pydantic_settings
 pydantic==2.3
-sqlalchemy > 1.4.41
+sqlalchemy >= 1.4.41
 sqlalchemy_utils
 pytz
 email-validator
