fix: upgrade vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,14 @@
     "cSpell.words": [
         "deepdiff",
         "httpx"
-    ]
+    ],
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        "./tests",
+        "-p",
+        "test_*.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true
 }
