--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ python-multipart
 fastapi>=0.100
 pydantic_settings
 pydantic>=2.5
-sqlalchemy >= 1.4.41
 sqlalchemy_utils
 pytz
 email-validator
 deepdiff
 unidecode
 elastic-apm
+pysql-repo==0.5.2
