feat: add opentelemetry on sqlalchemy

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ loguru
 opentelemetry-api
 opentelemetry-exporter-otlp-proto-http
 opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-sqlalchemy
 opentelemetry-sdk
