--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@ python-jose
 python-multipart
 fastapi>=0.108.0
 pydantic_settings
-pydantic>=2.5
+pydantic>=2.5,<3.0.0
 sqlalchemy_utils
 email-validator
 deepdiff
 unidecode
-pysql-repo==0.7.3.3
+pysql-repo==0.7.4.0
 loguru
 opentelemetry-api
 opentelemetry-exporter-otlp-proto-http
